# voronini

./: pyproject.toml
src/: main.py
src/app/: main_app.py
src/app/frames/: scrollable_frame.py
src/minimize/: minimize.py
src/parsing/: parsing.py
