[tool.poetry]
name = "voronini"
version = "0.1.0"
description = ""
authors = ["Kirill Petryashev <petryashev.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
scipy = "^1.11.3"
PuLP = "^2.7.0"
customtkinter = "^5.2.1"
packaging = "^23.2"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
